@@ -1635,6 +1635,7 @@ dongle    = false
 #                                              lfn: Enable long filename support. If set to auto (default), it is enabled if the reported DOS version is at least 7.0.
 #                                                     If set to autostart, the builtin VER command won't activate/disactivate LFN support according to the reported DOS version.
 #                                                     Possible values: true, false, 1, 0, auto, autostart.
+#                                      autoloadfix: If set (default), DOSBox-X will automatically re-run the executable with LOADFIX if it failed with the "Packed file is corrupt" error.
 #                                        automount: Enable automatic drive mounting in Windows.
 #                                     automountall: Automatically mount all available Windows drives at start.
 #                                     mountwarning: If set, a warning will be displayed if you try to mount C:\ in Windows or / in other platforms.
@@ -1726,6 +1727,7 @@ private area in umb                              = true
 quick reboot                                     = false
 ver                                              = 
 lfn                                              = auto
+autoloadfix                                      = true
 automount                                        = true
 automountall                                     = false
 mountwarning                                     = true
