@@ -897,7 +897,7 @@ bool DOS_Shell::Execute(char* name, const char* args) {
 /* return true  => don't check for hardware changes in do_command 
  * return false =>       check for hardware changes in do_command */
 	char fullname[DOS_PATHLENGTH+4]; //stores results from Which
-    const char* p_fullname;
+	const char* p_fullname;
 	char line[CMD_MAXLINE];
 	if(strlen(args)!= 0){
 		if(*args != ' '){ //put a space in front
@@ -913,13 +913,13 @@ bool DOS_Shell::Execute(char* name, const char* args) {
 		line[0]=0;
 	}
 
+	const Section_prop* sec = static_cast<Section_prop*>(control->GetSection("dos"));
 	/* check for a drive change */
 	if (((strcmp(name + 1, ":") == 0) || (strcmp(name + 1, ":\\") == 0)) && isalpha(*name) && !control->SecureMode())
 	{
 		if (strrchr(name,'\\')) { WriteOut(MSG_Get("SHELL_EXECUTE_ILLEGAL_COMMAND"),name); return true; }
 		if (!DOS_SetDrive(toupper(name[0])-'A')) {
 #ifdef WIN32
-            const Section_prop* sec = 0; sec = static_cast<Section_prop*>(control->GetSection("dos"));
 			if(!sec->Get_bool("automount")) { WriteOut(MSG_Get("SHELL_EXECUTE_DRIVE_NOT_FOUND"),toupper(name[0])); return true; }
 			// automount: attempt direct letter to drive map.
 			int type=GetDriveType(name);
@@ -1140,13 +1140,13 @@ continue_1:
 		reg_eip=oldeip;
 		SegSet16(cs,oldcs);
 #endif
-		if (packerr&&!infix) {
+		if (packerr&&!infix&&sec->Get_bool("autoloadfix")) {
 			Bit16u segment;
 			Bit16u blocks = (Bit16u)(64*1024/16);
 			if (DOS_AllocateMemory(&segment,&blocks)) {
 				DOS_MCB mcb((Bit16u)(segment-1));
 				mcb.SetPSPSeg(0x40);
-				WriteOut("\r\nNow run it with LOADFIX..\r\n");
+				WriteOut("\r\n\033[33;1mDOSBox-X could not load the executable due to the above error.\033[0m\r\n\033[33;1mDOSBox-X will now try to run the executable again with LOADFIX..\033[0m\r\n");
 				infix=true;
 				Execute(name, args);
 				infix=false;
