@@ -1,4 +1,9 @@
 0.83.6
+  - Improved the message when automatically re-running
+    the executable which failed with the "Packed file
+    is corrupt" error. Also added the "autoloadfix"
+    config option which when set to "false" will not
+    automatically re-run such programs. (Wengier)
   - Added the "Show advanced options" checkbox in the
     main screen of the Configuration GUI to toggle
     whether to display all config options for the
